[gd_scene format=3 uid="uid://cwek83s4036ic"]

[ext_resource type="Script" uid="uid://cy7il3cu1b0cp" path="res://vault.gd" id="1_2n7r2"]
[ext_resource type="Texture2D" uid="uid://d6mjr4byupf3" path="res://icons/logo.svg" id="1_lqr8i"]
[ext_resource type="Shader" uid="uid://c116cf6fjsftq" path="res://shaders/blur.gdshader" id="2_cmbqh"]
[ext_resource type="Texture2D" uid="uid://dt4ubeg3ikmfd" path="res://icons/settings.svg" id="3_0ennw"]
[ext_resource type="PackedScene" uid="uid://cg82ihc40n24h" path="res://auth_panel.tscn" id="3_cmbqh"]
[ext_resource type="PackedScene" uid="uid://dnmf8fdoa0ssm" path="res://new_entry_panel.tscn" id="5_0obug"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vp1ho"]
shader = ExtResource("2_cmbqh")
shader_parameter/blur_amount = 2.0
shader_parameter/blur_quality = 3
shader_parameter/dither_strength = 0.1

[node name="Vault" type="Control" unique_id=440608926 node_paths=PackedStringArray("auth_panel_container", "auth_panel", "flow_container", "copied_toast", "new_entry_container", "new_entry_panel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2n7r2")
auth_panel_container = NodePath("AuthPanelContainer")
auth_panel = NodePath("AuthPanelContainer/CenterContainer/AuthPanel")
flow_container = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer")
copied_toast = NodePath("CopiedToast")
new_entry_container = NodePath("NewEntryContainer")
new_entry_panel = NodePath("NewEntryContainer/CenterContainer/NewEntryPanel")

[node name="VaultContainer" type="Control" parent="." unique_id=1432826734]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VaultContainer" unique_id=283371797]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BGPanel"

[node name="MarginContainer" type="MarginContainer" parent="VaultContainer/PanelContainer" unique_id=1699871104]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VaultContainer/PanelContainer/MarginContainer" unique_id=1286845890]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer" unique_id=1388079694]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer" unique_id=1307521039]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=357846364]
layout_mode = 2

[node name="LHBox" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=284143612]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox" unique_id=619076213]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture = ExtResource("1_lqr8i")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox" unique_id=867113263]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox" unique_id=2114622795]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Keybox"

[node name="Control" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1669982435]
layout_mode = 2
size_flags_horizontal = 3

[node name="RHBox" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=885894217]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddSecretButton" type="Button" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox" unique_id=1131095887]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"AccentButton"
theme_override_font_sizes/font_size = 15
text = "Add Secret"

[node name="SettingsButton" type="Button" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox" unique_id=903385632]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("3_0ennw")

[node name="HSeparator" type="HSeparator" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=202896877]
layout_mode = 2
theme_override_constants/separation = 36

[node name="SearchEdit" type="LineEdit" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=323548366]
layout_mode = 2
theme_type_variation = &"LineEditSearch"
placeholder_text = "Search your vault..."

[node name="Control" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=1547291198]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=1600529074]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24

[node name="NewEntryContainer" type="Control" parent="." unique_id=770378332]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BGBlur" type="ColorRect" parent="NewEntryContainer" unique_id=499332118]
material = SubResource("ShaderMaterial_vp1ho")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="NewEntryContainer" unique_id=199176223]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewEntryPanel" parent="NewEntryContainer/CenterContainer" unique_id=1796737077 instance=ExtResource("5_0obug")]
layout_mode = 2

[node name="AuthPanelContainer" type="Control" parent="." unique_id=688470071]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="BGBlur" type="ColorRect" parent="AuthPanelContainer" unique_id=579630867]
material = SubResource("ShaderMaterial_vp1ho")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="AuthPanelContainer" unique_id=664905842]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AuthPanel" parent="AuthPanelContainer/CenterContainer" unique_id=2056608960 instance=ExtResource("3_cmbqh")]
layout_mode = 2

[node name="CopiedToast" type="PanelContainer" parent="." unique_id=893468467]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.5
offset_top = -148.0
offset_right = 92.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"Toast"

[node name="Label" type="Label" parent="CopiedToast" unique_id=1559565574]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Copied to Clipboard"
horizontal_alignment = 1

[connection signal="pressed" from="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox/AddSecretButton" to="." method="_on_add_secret_button_pressed"]
[connection signal="text_changed" from="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/SearchEdit" to="." method="_on_search_edit_text_changed"]
[connection signal="canceled" from="NewEntryContainer/CenterContainer/NewEntryPanel" to="." method="_on_new_entry_panel_canceled"]
[connection signal="created" from="NewEntryContainer/CenterContainer/NewEntryPanel" to="." method="_on_new_entry_panel_created"]
[connection signal="access_granted" from="AuthPanelContainer/CenterContainer/AuthPanel" to="." method="_on_auth_panel_access_granted"]
